--- a/calculator.html
+++ b/calculator.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link rel='stylesheet' href='style.css'>
     <script src='script.js' defer></script>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="calculator">
@@ -23,7 +24,7 @@
         <button class="number">7</button>
         <button class="number">8</button>
         <button class="number">9</button>
-        <button class="multiply operator">*</button>
+        <button class="multiply operator">x</button>
         
         <button class="number">4</button>
         <button class="number">5</button>
